# david

./: dev.ryzokuken.david.json  dev.ryzokuken.david.json~  meson.build
data/: dev.ryzokuken.david.appdata.xml.in  dev.ryzokuken.david.desktop.in  dev.ryzokuken.david.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: dev.ryzokuken.david.data.gresource.xml  dev.ryzokuken.david.src.gresource.xml  main.js  meson.build  window.js  window.ui  window.ui~
